# PyEGM

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_ch.md  README_en.md  pyproject.toml
src/pyegm/: __init__.py  defaults.py  pyegm.py
src/pyegm/data/: balanced_kshot__fixed.yaml  balanced_kshot__rules.yaml  best_rules.yaml  extreme_lowshot__fixed.yaml  extreme_lowshot__rules.yaml  fscil__fixed.yaml  fscil__rules.yaml  imbalanced_kshot__fixed.yaml  imbalanced_kshot__rules.yaml
